Fix the scrollbar effect that the new footer line did create

--- a/blog.williamdes.eu/sass/_theme.scss
+++ b/blog.williamdes.eu/sass/_theme.scss
@@ -180,7 +180,7 @@ img {
   -------------------------------------------------- */
 .main {
     position: relative;
-    min-height: calc(100vh - var(--header-height) - var(--footer-height));
+    min-height: calc(95vh - var(--header-height) - var(--footer-height));
     max-width: calc(var(--main-width) + var(--gap) * 2);
     margin-left: auto;
     margin-right: auto;
